# opencv-lab

./: .gitignore  README.md  note-soluzioni-prof
A1/: A1_313336.cpp  CMakeLists.txt
A2/: A2.txt  A2_313336.cpp  CMakeLists.txt  main.cpp
lab0/BEV/pratico_20190129/: CMakeLists.txt
lab0/BEV/pratico_20190129_solved/: main.cpp
lab0/SAD/pratico_20181220_solved/: simple2.cpp
lab0/demosaicatura/my-solution/: simple.cpp
lab0/kmeans/: .autotools  simple.cpp
lab0/omografia+sharpening/: .cproject  CMakeCache.txt  Makefile
lab0/omografia+sharpening/soluzione_carlini/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
lab0/ottagono/carlini/es2/: Dummy.cpp  Dummy.h
lab1/example-slides/: CMakeLists.txt  example-slides.cpp
lab1/simple/: simple.cpp
lab11/: CMakeLists.txt  kmeans.cpp
lab2/: test-pointer.cpp
lab2/ex1/: CMakeLists.txt  ex1.cpp
lab2/ex1/OpenCvPlayer/OpenCvPlayer_autogen/EKCBNUEMAK/: moc_QtEngine.cpp
lab2/ex10/: CMakeLists.txt  ex10.cpp
lab2/ex11_downsample2x/: CMakeLists.txt  ex11.cpp
lab2/ex12/: CMakeLists.txt  ex12.cpp
lab2/ex13_simple/: CMakeLists.txt  ex13.cpp
lab2/ex2/: ex2.cpp
lab2/ex3/: CMakeLists.txt  ex3.cpp
lab2/ex3/OpenCvPlayer/: Dummy.cpp
lab2/ex3/OpenCvPlayer/OpenCvPlayer_autogen/: moc_predefs.h
lab2/ex4/: CMakeLists.txt  ex4.cpp
lab2/ex5/: CMakeLists.txt  ex5.cpp
lab2/ex5/OpenCvPlayer/: CMakeLists.txt
lab2/ex5/OpenCvPlayer/Engine/: QtEngine.cpp  QtEngine.h
lab2/ex6/: CMakeLists.txt  ex6.cpp
lab2/ex6/OpenCvPlayer/Engine/: paths.h
lab2/ex6/OpenCvPlayer/OpenCvPlayer_autogen/: mocs_compilation.cpp
lab2/ex7/: CMakeLists.txt  ex7.cpp
lab2/ex8/: CMakeLists.txt  ex8.cpp
lab2/ex8/OpenCvPlayer/Engine/: Makefile  cmake_install.cmake
lab2/ex9/: CMakeLists.txt  ex9.cpp
lab3/ex1/: ex1-saccuti.cpp  ex1.cpp
lab3/ex2/: CMakeLists.txt  ex2.cpp
lab3/images/: binarized-organs.pbm
lab4/background-subtraction/: background-subtraction.cpp
lab4/frame-precedente/: CMakeLists.txt  frame-precedente.cpp
lab5/: data.tgz
lab5/L5_2019_solved/ex1_solved/: CMakeLists.txt  ex1_solved.kdev4  main.cpp  utils.h
lab5/L5_2019_solved/ex2_solved/: main.cpp
lab5/ex1/: CMakeLists.txt  ex1.cpp  ex1_prof.cpp  utils.h
lab5/ex2/: CMakeLists.txt  ex2.cpp
lab6/L6-solved/L6_disparity-vdisparity/: simple.cpp
lab6/ex1/: ex1.cpp
old/BEV/pratico_20190129/: _cproject.xml  utils.h
old/BEV/pratico_20190129_solved/: .cproject
old/SAD/pratico_20181220_solved/: _cproject(1).xml
old/_BEV/my-solution/: main.cpp  utils.h
old/_BEV/pratico_20190129/: main.cpp
old/_BEV/pratico_20190129_solved/: .project  main.cpp  utils.h
old/_BEV/pratico_20190129_solved/images/: mono.pgm
old/_SAD/my-solution/: CMakeLists.txt  SAD.cpp
old/_SAD/pratico_20181220/: simple.cpp
old/_SAD/pratico_20181220/images/: L-0.pgm
old/_SAD/pratico_20181220_solved/: simple.cpp
old/_SAD/pratico_20181220_solved/images/: R-0.pgm
old/_SAD/pratico_20181220_solved_extend/: _cproject.xml  simple.cpp
old/_kmeans/my-solution/: kmeans.cpp
old/_kmeans/pratico_k_means/pratico_k_means_solved/: .cproject  simple.cpp
old/_kmeans/pratico_k_means_solved/: .project
old/_ottagono/.carlini/es1/: .project  Makefile
old/_ottagono/.carlini/es1/Engine/: cmake_install.cmake
old/_ottagono/carlini/es1/: .cproject  CMakeCache.txt  Dummy.cpp  main.cpp
old/_ottagono/carlini/es1/data/: ottagono.pgm
old/_ottagono/carlini/es2/: .cproject
old/_ottagono/carlini/es2/Engine/: CMakeLists.txt  paths.h.cmake
old/_ottagono/my-solution/: CMakeLists.txt  _project.xml  ottagono.cpp  simple.cpp
old/_ottagono/my-solution/images/: .ottagono.pgm.icloud
old/_ottagono/pratico_20190108_solved/pratico_20190108_solved_pentagono/: _cproject.xml  simple.cpp
old/demosaicatura/: luminance_carlini.cpp
old/demosaicatura+kmeans/my-solution/: main.cpp
old/demosaicatura/my-solution/: simple.cpp
old/kmeans/: .cproject  kmeans.cpp
old/omografia+sharpening/: cmake_install.cmake  main.cpp
old/omografia+sharpening/my-solution/: CMakeLists.txt  main.cpp
old/omografia+sharpening/soluzione_carlini/: CMakeCache.txt  Makefile  cmake_install.cmake  pratico
old/ottagono/carlini/es1/: cmake_install.cmake  utils.h
old/ottagono/carlini/es1/Engine/: Makefile  QtEngine.cpp  paths.h
old/ottagono/carlini/es2/: .project
old/ottagono/pratico_20190108/pratico_20190108/: _cproject.xml
simple2/: CMakeLists.txt
skel/: CMakeLists.txt  simple.cpp
test/: A1-tests.cpp  test-vari  test-vari.cpp  test.cpp  test.txt  test_randoms.cpp
test/funzioni-utili/: CMakeLists.txt  utils.h
tests/: simple.cpp  tests.cpp
tests/floodfill/: CMakeLists.txt  floodfill.cpp
tests/floodfill2/: CMakeLists.txt  floodfill2.cpp
tests/histogram-equalization/: CMakeLists.txt  histogram_equalization.cpp
tests/histogram_equalization_alessio/: CMakeLists.txt  main.cpp  utils.cpp
tests/hough/: CMakeLists.txt  hough.cpp
tests/image_stitching/: CMakeLists.txt  image_stitching.cpp
utils/: CMakeLists.txt  camera.cpp  general.cpp
